--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 <body>
     <main>
-
+        <section id="container"> 
+          <article class="cartao "></article>  
+          <div class="cartao_conteudo">
+            <h3>Programação</h3>
+          
+            <div class="cartao conteudo"></div>
+          </div> 
+        </section>
     </main>
     <footer>
-        <p>projeto </p>
+        <p>Projeto desenvolvido pela altura, sem fins lucrativos</p>
     </footer>
-</body>
-</html>
